# ore-reconciliation

./: .gitignore  Dockerfile  README.md  build.py  data_reconciliation.py  log_config.py  pyproject.toml  requirements.txt  retrieve_data_athena.py  retrieve_data_aurora.py  snsfactory.py  update_athena.py
config/: athena_config.yml
src/: awsConfigUpdate.py  data_reconciliation.py  update_athena.py
src/main/python/utils/: snsfactory.py
src/utils/: retrieve_data_athena.py  retrieve_data_aurora.py  snsfactory.py
utils/: aws_config.py  update_athena.py
