[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "OreDataReconciliation"
version = "0.0.1"
authors = [
  { name="EPaul Chen", email="paulchen8206@gmail.com" },
]
description = "A small package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/paulchen8206/ore-reconciliation"